@@ -38,5 +38,11 @@ Corrected tag info after seek
 Some clean up
 [B]2.1.0[/B]
 new level for favorites
+[B]2.2.0[/B]
+rating sort for channels
+[B]2.3.0[/B]
+favorites handling
+[B]2.3.1[/B]
+new way of favorites handling
 
 
